# SUBmarine

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.example.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
templates/: index.html
tests/: conftest.py  test_api.py  test_auth.py  test_helpers.py  test_removal.py  test_space.py  test_sync.py
