[project]
name = "submarine"
description = "A scanner for Plex overlap with streaming services"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.ruff]
line-length = 130
target-version = "py310"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = [
    "E501", # long lines: log/message strings are clearer unwrapped
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
